APPEnvoy/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080

      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager

                stat_prefix: ingress_http

                route_config:
                  name: local_route

                  virtual_hosts:
                    - name: fastapi_service
                      domains: ["*"]

                      routes:
                        - match:
                            prefix: "/"

                          route:
                            cluster: fastapi_cluster

                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: fastapi_cluster
      connect_timeout: 1s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN

      load_assignment:
        cluster_name: fastapi_cluster

        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: fastapi
                      port_value: 8000

admin:
  access_log_path: /tmp/admin_access.log

  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
